tests/snapshots/help/jobs__cancel.snap
---
source: tests/cli/snapshots.rs
---
Cancel a pending or running job

Usage: vendo jobs cancel [OPTIONS] <jobId>

Arguments:
  <jobId>  

Options:
      --json            Output raw JSON
  -y, --yes             Skip confirmation prompt
      --dry-run         Preview the action without executing
      --output <field>  Print a single field (e.g. id)
  -h, --help            Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo jobs cancel <jobId>
  $ vendo jobs cancel <jobId> --yes
  $ vendo jobs cancel <jobId> --dry-run
